Updated favicon, remember site states, adjustable panel

--- a/index.html
+++ b/index.html
@@ -3,12 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oh My Course!</title>
-    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+
+    <!-- Primary Meta Tags -->
+    <title>Oh My Course! - Learn from Your Downloaded Courses Offline</title>
+    <meta name="title" content="Oh My Course! - Learn from Your Downloaded Courses Offline">
+    <meta name="description" content="A beautiful, privacy-focused course viewer for your locally downloaded courses. Track progress, watch videos, and learn at your own pace. Everything stays on your device.">
+    <meta name="keywords" content="course viewer, offline learning, video course player, course management, privacy-focused education, local course viewer">
+    <meta name="author" content="Oh My Course">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://piyalahmed.com/oh-my-course/">
+    <meta property="og:title" content="Oh My Course! - Learn from Your Downloaded Courses Offline">
+    <meta property="og:description" content="A beautiful, privacy-focused course viewer for your locally downloaded courses. Track progress, watch videos, and learn at your own pace. Everything stays on your device.">
+    <meta property="og:image" content="https://piyalahmed.com/oh-my-course/assets/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://piyalahmed.com/oh-my-course/">
+    <meta property="twitter:title" content="Oh My Course! - Learn from Your Downloaded Courses Offline">
+    <meta property="twitter:description" content="A beautiful, privacy-focused course viewer for your locally downloaded courses. Track progress, watch videos, and learn at your own pace. Everything stays on your device.">
+    <meta property="twitter:image" content="https://piyalahmed.com/oh-my-course/assets/og-image.png">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#1DB954">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://piyalahmed.com/oh-my-course/">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -58,6 +91,9 @@
                     </div>
                 </nav>
             </aside>
+
+            <!-- Resizer -->
+            <div class="resizer" id="resizer"></div>
 
             <!-- Content Area -->
             <main class="content-area">
