Add bank link to portfolio

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
                                 Buy Me a Coffee
                             </a>
                         </div>
+
+                        <div class="footer-credit">
+                            Built with ❤️ by <a href="https://piyalahmed.com" target="_blank" rel="noopener noreferrer">Piyal Ahmed</a>
+                        </div>
                     </div>
                 </div>
 
